# feature_extraction_idnn

./: .gitignore  main_batch.py  main_mini.py  pyproject.toml  readme.md  req_pt.txt  requirements.txt  requirements_cuda.txt  sample_code.py  sample_code_full.py  sample_code_mini.py  test_outp_arrays.py  utils_ml.py
.github/workflows/: build.yml  build_and_test_from_pkg.yml  build_and_test_package.yml  build_test_release.yml  install_deps_and_run_tests.yml  python-package.yml
dev/dev_outp/: coucou.txt
dev/dev_scripts/: build_utils.sh  dev_script_01.py  install_utils.sh
dev_scripts/: build_utils.sh  dev_script_01.py  install_utils.sh
history/: history.py
pt_extract_features/: 01_extract.py  history.py  main.py  main_batch.py  utils_ml.py
src/: fe_idnn.py  test_01.py
src/fe_idnn/: tools.py
test/: test_build_under_vev.py
