[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
      
[tool.setuptools.packages.find]
where = ["src"]  
include = ["fe_idnn*"]  

[project]
name = "fe_idnn" 
version = "v0.0.6"
dependencies = [
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "umap-learn>=0.5.7",
]
authors = [
  { name="Serge Zaugg", email="author@example.com" },
]
description = "feature extraction from spectrogram images with pre-trained images DNNs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sergezaugg/feature_extraction_idnn"
Issues = "https://github.com/sergezaugg/feature_extraction_idnn/issues"

