# Build setup to make package with single module 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fe_idnn"
version = "0.9.8"
description = "Feature extraction from spectrogram images with pre-trained images DNNs"
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name="Serge Zaugg"}]
dependencies = [
    "pandas>=2.3.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "umap-learn>=0.5.7",
]

[tool.hatch.build]
sources = ["src"]

# This is the key for a single-file module:
[tool.hatch.build.targets.wheel]
include = ["fe_idnn.py"]

[project.urls]
Homepage = "https://github.com/sergezaugg/feature_extraction_idnn"
Issues = "https://github.com/sergezaugg/feature_extraction_idnn/issues"






